@@ -1,3 +1,9 @@
+Tue Nov 11 17:28:01 PST 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimBuddyList.cpp:
+	  - It's now up to paintCell() to format the output for the group
+	    information, and it looks much nicer.
+
 Mon Nov 03 21:49:36 PST 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimBuddyList.cpp:
